--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -15,7 +15,7 @@
 @media (prefers-color-scheme: dark) {
   :root {
     --background: #fffff;
-    --foreground: #ededed;
+    --foreground: #868686;
   }
 }
 
